--- a/backend/package.json
+++ b/backend/package.json
@@ -13,9 +13,12 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "express-validator": "^7.2.1",
+    "google-auth-library": "^10.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.1",
     "mongoose-paginate-v2": "^1.9.1",
+    "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.3.2"
   },
   "devDependencies": {
